--- a/PbrGl/PbrGl.vcxproj
+++ b/PbrGl/PbrGl.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -124,7 +124,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -142,7 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
