--- a/PbrGl/PbrGl.vcxproj
+++ b/PbrGl/PbrGl.vcxproj
@@ -88,13 +88,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)PbrGl\third-party\glfw\include;$(SolutionDir)PbrGl\third-party\glad\include;$(SolutionDir)PbrGl\third-party\assimp\include;$(SolutionDir)PbrGl\third-party\glm\include;$(SolutionDir)PbrGl\third-party\ktx\include;$(SolutionDir)PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\lib-vc2019;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)PbrGl\third-party\glfw\lib-vc2019;$(SolutionDir)PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -106,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)PbrGl\third-party\glfw\include;$(SolutionDir)PbrGl\third-party\glad\include;$(SolutionDir)PbrGl\third-party\assimp\include;$(SolutionDir)PbrGl\third-party\glm\include;$(SolutionDir)PbrGl\third-party\ktx\include;$(SolutionDir)PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -114,7 +114,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\lib-vc2019;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)PbrGl\third-party\glfw\lib-vc2019;$(SolutionDir)PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -124,13 +124,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)PbrGl\third-party\glfw\include;$(SolutionDir)PbrGl\third-party\glad\include;$(SolutionDir)PbrGl\third-party\assimp\include;$(SolutionDir)PbrGl\third-party\glm\include;$(SolutionDir)PbrGl\third-party\ktx\include;$(SolutionDir)PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\lib-vc2019;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)PbrGl\third-party\glfw\lib-vc2019;$(SolutionDir)PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -142,7 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glad\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glm\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\ktx\include;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)PbrGl\third-party\glfw\include;$(SolutionDir)PbrGl\third-party\glad\include;$(SolutionDir)PbrGl\third-party\assimp\include;$(SolutionDir)PbrGl\third-party\glm\include;$(SolutionDir)PbrGl\third-party\ktx\include;$(SolutionDir)PbrGl\third-party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -150,7 +150,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\glfw\lib-vc2019;C:\Users\zhuhui\source\repos\PbrGl\PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)PbrGl\third-party\glfw\lib-vc2019;$(SolutionDir)PbrGl\third-party\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
