--- a/PbrGl/PbrGl.vcxproj
+++ b/PbrGl/PbrGl.vcxproj
@@ -156,31 +156,43 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="colorPass.cpp" />
     <ClCompile Include="framebuffer.cpp" />
+    <ClCompile Include="gaussianBlurPass.cpp" />
     <ClCompile Include="model.cpp" />
     <ClCompile Include="PbrGl.cpp" />
     <ClCompile Include="program.cpp" />
+    <ClCompile Include="shadowPass.cpp" />
     <ClCompile Include="skybox.cpp" />
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="third-party\glad\src\glad.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h" />
+    <ClInclude Include="colorPass.h" />
     <ClInclude Include="common.hpp" />
     <ClInclude Include="framebuffer.h" />
+    <ClInclude Include="gaussianBlurPass.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="program.h" />
+    <ClInclude Include="shadowPass.h" />
     <ClInclude Include="skybox.h" />
     <ClInclude Include="texture.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="asset\su7.glb" />
+    <None Include="shader\gaussianBlurFragment.glsl" />
+    <None Include="shader\gaussianBlurVertex.glsl" />
     <None Include="shader\pbrFragment.glsl" />
     <None Include="shader\pbrVertex.glsl" />
+    <None Include="shader\shadowDepthFragment.glsl" />
+    <None Include="shader\shadowDepthVertex.glsl" />
     <None Include="shader\SimpleFragment.glsl" />
     <None Include="shader\SimpleVertex.glsl" />
     <None Include="shader\skyboxFragment.glsl" />
     <None Include="shader\skyboxVertex.glsl" />
+    <None Include="shader\unLightFragment.glsl" />
+    <None Include="shader\unLightVertex.glsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
